--- a/apps/frontend/src/app/components/tableInfoDialog/table-info-dialog.component.html
+++ b/apps/frontend/src/app/components/tableInfoDialog/table-info-dialog.component.html
@@ -212,14 +212,14 @@
     <strong>Comments:</strong>
     <p>A further explanation of the assignment.</p>
 
-    <strong>Received by:</strong>
+    <strong>Requested by:</strong>
     <p>
       The one who gave the bell boy the assignment. Can be reception, guest or other. If other do a
       further explanation in the comments.
     </p>
 
-    <strong>Received at:</strong>
-    <p>When the assignment was received.</p>
+    <strong>Requested at:</strong>
+    <p>When the assignment was requested.</p>
 
     <strong>Preformed by:</strong>
     <p>The initials of the bell boy who did the assignment.</p>
