--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -29,14 +29,14 @@
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="receivedBy">
-        <th mat-header-cell *matHeaderCellDef>Received by</th>
-        <td mat-cell *matCellDef="let item">{{ item.receivedBy }}</td>
+      <ng-container matColumnDef="requestedBy">
+        <th mat-header-cell *matHeaderCellDef>Requested by</th>
+        <td mat-cell *matCellDef="let item">{{ item.requestedBy }}</td>
       </ng-container>
-      <ng-container matColumnDef="receivedAt">
-        <th mat-header-cell *matHeaderCellDef>Received at</th>
+      <ng-container matColumnDef="requestedAt">
+        <th mat-header-cell *matHeaderCellDef>Requested at</th>
         <td mat-cell *matCellDef="let item">
-          {{ item.receivedAt | date : 'dd/MM HH:mm' }}
+          {{ item.requestedAt | date : 'dd/MM HH:mm' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="performedBy">
