--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -48,16 +48,16 @@
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
-      <mat-label>Received by</mat-label>
-      <mat-select [(value)]="data.receivedBy" formControlName="receivedBy">
-        <mat-option *ngFor="let receivedBy of bbAssignmentReceivedBy" [value]="receivedBy">
-          {{ receivedBy }}
+      <mat-label>Requested by</mat-label>
+      <mat-select [(value)]="data.requestedBy" formControlName="requestedBy">
+        <mat-option *ngFor="let requestedBy of bbAssignmentRequestedBy" [value]="requestedBy">
+          {{ requestedBy }}
         </mat-option>
       </mat-select>
       <mat-error
         *ngIf="
-          updateAssignmentForm.get('receivedBy')?.invalid &&
-          updateAssignmentForm.get('receivedBy')?.dirty
+          updateAssignmentForm.get('requestedBy')?.invalid &&
+          updateAssignmentForm.get('requestedBy')?.dirty
         "
       >
         Can't be more than 20 characters
@@ -84,17 +84,17 @@
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
-      <mat-label>Time received</mat-label>
+      <mat-label>Requested at</mat-label>
       <input
         matInput
-        [ngxMatDatetimePicker]="receivedAt"
+        [ngxMatDatetimePicker]="requestedAt"
         placeholder="dd/MM HH:mm"
-        formControlName="receivedAt"
+        formControlName="requestedAt"
         [max]="maxDatetime"
       />
-      <mat-datepicker-toggle matSuffix [for]="$any(receivedAt)"></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(requestedAt)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
-        #receivedAt
+        #requestedAt
         [showSpinners]="true"
         [showSeconds]="false"
         [touchUi]="true"
@@ -103,7 +103,7 @@
     </mat-form-field>
 
     <mat-form-field autocomplete="off" appearance="fill">
-      <mat-label>Time performed</mat-label>
+      <mat-label>Performed at</mat-label>
       <input
         matInput
         [ngxMatDatetimePicker]="completedAt"
