--- a/apps/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<frontend-dashboard-links></frontend-dashboard-links>
-<frontend-weather-widget></frontend-weather-widget>
-<frontend-dashboard-document-section></frontend-dashboard-document-section>
+<main>
+  <frontend-dashboard-links></frontend-dashboard-links>
+  <frontend-weather-widget></frontend-weather-widget>
+  <frontend-dashboard-document-section></frontend-dashboard-document-section>
+</main>
