--- a/apps/frontend/src/assets/styles/dialog.scss
+++ b/apps/frontend/src/assets/styles/dialog.scss
@@ -6,6 +6,16 @@ h1 {
 .dialog-container {
   max-height: 80vh;
   overflow: auto;
+  padding: 5px;
+}
+
+.dialog-container::-webkit-scrollbar {
+  width: 2px;
+}
+
+.dialog-container::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .full-width {
