--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -99,6 +99,21 @@
           <mat-icon aria-hidden="false">library_books</mat-icon>
           <span class="side-nav-item" [ngClass]="{ collapsible: sidebarCollapsed }">Documents</span>
         </button>
+        
+        <button
+          mat-list-item
+          data-cy="sidebar-announcements-btn"
+          [ngClass]="title === 'Announcements' ? 'active-nav' : ''"
+          routerLink="/announcements"
+        >
+          <mat-icon aria-hidden="false" data-cy="icon">announcement</mat-icon>
+          <span
+            class="side-nav-item"
+            [ngClass]="{ collapsible: sidebarCollapsed }"
+            data-cy="side-nav-item"
+            >Announcements</span
+          >
+        </button>
       </mat-action-list>
     </div>
     <button mat-flat-button (click)="toggleCollapsed()" class="toggle-btn">
