--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -14,6 +14,7 @@
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
   --main-blue-lowest-opacity: rgba(47, 47, 162, 0.1);
   --action-gradient: linear-gradient(192.45deg, #f64c72 0%, #f64c72 0%, #fa7b34 100%);
+  --lime-green: #1DEA3E;
 }
 
 html,
@@ -56,4 +57,11 @@ button {
 .basic-btn {
   color: var(--main-blue);
   background-color: white;
+}
+
+.active-btn {
+  color: white;
+  background: var(--lime-green);
+  pointer-events: none;
+  cursor: default;
 }
