--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -4,7 +4,9 @@
       <button mat-raised-button class="basic-btn">Future</button>
       <button mat-raised-button class="basic-btn">Active</button>
       <button mat-raised-button class="basic-btn">Experied</button>
-      <button mat-raised-button class="action-btn">Add announcement</button>
+      <button mat-raised-button class="action-btn" (click)="createAnnouncement()">
+        Add announcement
+      </button>
     </div>
   </div>
   <hr />
@@ -26,9 +28,9 @@
         <td mat-cell *matCellDef="let element">{{ element.showFrom | date : 'dd/MM' }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="shownTo">
+      <ng-container matColumnDef="showTo">
         <th mat-header-cell *matHeaderCellDef>Shown To</th>
-        <td mat-cell *matCellDef="let element">{{ element.shownTo | date : 'dd/MM' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.showTo | date : 'dd/MM' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="images">
@@ -48,7 +50,8 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="editAnnouncement()"></tr>
+      
     </table>
 
     <div class="table-spinner-full-size" *ngIf="isLoading">
