--- a/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
+++ b/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
@@ -1,10 +1,10 @@
-<table> 
-  <tr>
+<table class="info-table"> 
+  <tr class="header">
     <th>Name</th>
     <th>Explanation</th>
   </tr>
   <tr *ngFor="let attribute of displayInfo?.tableInformation">
-    <td>{{attribute.name}}</td>
+    <td class="name">{{attribute.name}}</td>
     <td>{{attribute.description}}</td>
   </tr>
 </table>
