--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -1,9 +1,30 @@
 <main>
   <div class="table-actions" style="justify-content: end">
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn">Future</button>
-      <button mat-raised-button class="basic-btn">Active</button>
-      <button mat-raised-button class="basic-btn">Experied</button>
+      <button
+        mat-raised-button
+        (click)="showFuture = !showFuture; updateList()"
+        class="basic-btn"
+        [ngStyle]="{ opacity: showFuture ? 1 : 0.5 }"
+      >
+        Future
+      </button>
+      <button
+        mat-raised-button
+        (click)="showActive = !showActive; updateList()"
+        class="basic-btn"
+        [ngStyle]="{ opacity: showActive ? 1 : 0.5 }"
+      >
+        Active
+      </button>
+      <button
+        mat-raised-button
+        (click)="showExpired = !showExpired; updateList()"
+        class="basic-btn"
+        [ngStyle]="{ opacity: showExpired ? 1 : 0.5 }"
+      >
+        Experied
+      </button>
       <button mat-raised-button class="action-btn" (click)="createAnnouncement()">
         Add announcement
       </button>
@@ -12,7 +33,7 @@
   <hr />
 
   <div class="table-height">
-    <table mat-table [dataSource]="dataSource" *ngIf="!isLoading">
+    <table mat-table [dataSource]="announcementList" *ngIf="!isLoading">
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Title</th>
         <td mat-cell *matCellDef="let element" class="comments-field">{{ element.title }}</td>
@@ -30,10 +51,10 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="shownTo">
-        <th mat-header-cell *matHeaderCellDef>Shown <br />To</th>
+      <ng-container matColumnDef="showTo">
+        <th mat-header-cell *matHeaderCellDef>Show <br />To</th>
         <td mat-cell *matCellDef="let element" class="small-field">
-          {{ element.shownTo | date : 'dd/MM/YY' }}
+          {{ element.showTo | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
@@ -49,13 +70,18 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let element" class="small-field">
-          <button mat-flat-button class="active-btn">Status</button>
+          <button
+            mat-flat-button
+            class="status"
+            [ngClass]="getStatus(element.showFrom, element.showTo)"
+          >
+            {{ getStatus(element.showFrom, element.showTo) }}
+          </button>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="editAnnouncement()"></tr>
-      
     </table>
 
     <div class="table-spinner-full-size" *ngIf="isLoading">
