--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -14,7 +14,9 @@
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
   --main-blue-lowest-opacity: rgba(47, 47, 162, 0.1);
   --action-gradient: linear-gradient(192.45deg, #f64c72 0%, #f64c72 0%, #fa7b34 100%);
-  --lime-green: #1dea3e;
+  --lime-green: #98FFA8;
+  --green: #1dea3e;
+  --grey: rgba(0, 0, 0, 0.2);
 }
 
 html,
@@ -57,11 +59,4 @@ button {
 .basic-btn {
   color: var(--main-blue);
   background-color: white;
-}
-
-.active-btn {
-  color: white;
-  background: var(--lime-green);
-  pointer-events: none;
-  cursor: default;
 }
