--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -83,3 +83,7 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
+
+body {
+  overflow: hidden;
+}
