--- a/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
@@ -122,8 +122,8 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <button mat-raised-button class="secodary-btn" mat-dialog-close>Cancel</button>
-    <button mat-raised-button class="secondary-btn" type="submit">
+    <button mat-raised-button class="secondary-btn" mat-dialog-close>Cancel</button>
+    <button mat-raised-button class="action-btn" type="submit">
       <div *ngIf="!isLoading">Update</div>
       <div *ngIf="isLoading" class="btn-spinner">
         <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
