--- a/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
@@ -3,12 +3,17 @@
   routerLink="/car-list"
   [ngClass]="{ ready: readyCarList.length > 0, overdue: overdueCarList.length > 0 }"
 >
-  <h3>Cars</h3>
+  <div class="header">
+    <h3>Cars</h3>
+    <img src="assets/icons/alerts/critical-alert-icon.svg" alt="alert icon"/> 
+  </div>
+  
   <p>
     Next pick up time:
     <span>{{ nextPickUp | date : 'dd/MM HH:mm' }} / </span>
     <frontend-countdown *ngIf="nextPickUp" [nextTime]="nextPickUp"></frontend-countdown>
   </p>
+  
   <div class="data-container">
     <span>Future({{ futureCarList.length }})</span>
     <span class="ready" *ngIf="readyCarList.length > 0"> Ready({{ readyCarList.length }}) </span>
