--- a/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.scss
+++ b/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.scss
@@ -7,6 +7,18 @@
   box-shadow: 0px 0px 8px -3px rgb(0 0 0 / 10%);
   cursor: pointer;
 
+  .header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    img {
+      position: relative;
+      top: -11px;
+      left: 11px;
+    }
+  }
+
   &.ready {
     border: 1px solid var(--dark-yellow);
   }
