--- a/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
@@ -5,7 +5,8 @@
 >
   <div class="header">
     <h3>Cars</h3>
-    <img src="assets/icons/alerts/critical-alert-icon.svg" alt="alert icon"/> 
+    <img *ngIf="overdueCarList.length > 0" src="assets/icons/alerts/critical-alert-icon.svg" alt="alert icon"/> 
+    <img *ngIf="readyCarList.length > 0 && overdueCarList.length === 0" src="assets/icons/alerts/warning-alert-icon.svg" alt="alert icon"/> 
   </div>
   
   <p>
@@ -13,7 +14,7 @@
     <span>{{ nextPickUp | date : 'dd/MM HH:mm' }} / </span>
     <frontend-countdown *ngIf="nextPickUp" [nextTime]="nextPickUp"></frontend-countdown>
   </p>
-  
+
   <div class="data-container">
     <span>Future({{ futureCarList.length }})</span>
     <span class="ready" *ngIf="readyCarList.length > 0"> Ready({{ readyCarList.length }}) </span>
