--- a/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
@@ -38,13 +38,13 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" class="full-width">
-    <mat-label>Name</mat-label>
-    <input #name type="text" formControlName="name" matInput placeholder="Johnson" />
-    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
-  </mat-form-field>
-
   <div class="dialog-row">
+    <mat-form-field autocomplete="off" class="full-width">
+      <mat-label>Name</mat-label>
+      <input #name type="text" formControlName="name" matInput placeholder="Johnson" />
+      <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
+    </mat-form-field>
+
     <mat-form-field autocomplete="off">
       <mat-label>License plate</mat-label>
       <input
@@ -58,7 +58,9 @@
         Required
       </mat-error>
     </mat-form-field>
+  </div>
 
+  <div class="dialog-row">
     <mat-form-field class="remove-error-message">
       <mat-label>Park expiration</mat-label>
       <input
@@ -68,9 +70,7 @@
         formControlName="expirationDate"
       />
     </mat-form-field>
-  </div>
 
-  <div class="dialog-row">
     <mat-form-field class="remove-error-message">
       <mat-label>Pick up time</mat-label>
       <input
@@ -78,16 +78,6 @@
         matInput
         type="datetime-local"
         formControlName="pickUpTime"
-      />
-    </mat-form-field>
-
-    <mat-form-field class="remove-error-message">
-      <mat-label>Delivery Time</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="datetime-local"
-        formControlName="deliveryTime"
       />
     </mat-form-field>
   </div>
@@ -103,9 +93,32 @@
       </mat-autocomplete>
       <mat-error> {{ getErrorMessage() }} </mat-error>
     </mat-form-field>
+    
+    <mat-form-field class="remove-error-message">
+      <mat-label>Delivery Time</mat-label>
+      <input
+        onclick="this.showPicker()"
+        matInput
+        type="datetime-local"
+        formControlName="deliveryTime"
+      />
+    </mat-form-field>
+  </div>
 
+  <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>BB up</mat-label>
+      <input matInput formControlName="bbUp" [matAutocomplete]="bbUpOptions" />
+      <mat-autocomplete autoActiveFirstOption #bbUpOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredBbUp | async" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
+    </mat-form-field>
+
+    <mat-form-field autocomplete="off">
+      <mat-label>BB out</mat-label>
       <input matInput formControlName="bbOut" [matAutocomplete]="bbOutOptions" />
       <mat-autocomplete autoActiveFirstOption #bbOutOptions="matAutocomplete">
         <mat-option *ngFor="let option of filteredBbOut | async" [value]="option">
