--- a/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
@@ -1,3 +1,10 @@
+<frontend-file-upload
+  #fileUpload
+  [parentType]="'cars'"
+  (submissionFinishedEvent)="finalizeSubmission($event)"
+  (containsInvalidFilesEvent)="updateFilesStatus($event)"
+></frontend-file-upload>
+
 <form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <div class="title-container">
     <h1>Update Car</h1>
