--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -53,7 +53,13 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Date needed</mat-label>
-      <input onclick="this.showPicker()" matInput type="date" formControlName="dateNeeded" />
+      <input
+        onclick="this.showPicker()"
+        min="{{ today }}"
+        matInput
+        type="date"
+        formControlName="dateNeeded"
+      />
     </mat-form-field>
   </div>
 
