--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -86,7 +86,7 @@
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
-          {{ item.comments ?? '-' }}
+          {{ item.comments }}
         </td>
       </ng-container>
 
@@ -100,7 +100,7 @@
       <ng-container matColumnDef="dateNeeded">
         <th mat-header-cell *matHeaderCellDef>Date needed</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.dateNeeded ? (item.dateNeeded | date : 'dd/MM') : '-' }}
+          {{ item.dateNeeded ? (item.dateNeeded | date : 'dd/MM') : '' }}
         </td>
       </ng-container>
 
@@ -121,14 +121,14 @@
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB out</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.bbOut ?? '-' }}
+          {{ item.bbOut }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="dateOut">
         <th mat-header-cell *matHeaderCellDef>Date out</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '-' }}
+          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '' }}
         </td>
       </ng-container>
 
