--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -67,21 +67,21 @@
       <ng-container matColumnDef="pickUpTime">
         <th mat-header-cell *matHeaderCellDef>Pick up time</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.pickUpTime ? (item.pickUpTime | date : 'dd/MM HH:mm') : '-' }}
+          {{ item.pickUpTime ? (item.pickUpTime | date : 'dd/MM HH:mm') : '' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Returned</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '-' }}
+          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
-          {{ item.comments ? item.comments : '-' }}
+          {{ item.comments }}
         </td>
       </ng-container>
 
