--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -91,19 +91,19 @@
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Time out</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '-' }}
+          {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB out</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.bbOut ? item.bbOut : '-' }}
+          {{ item.bbOut }}
         </td>
       </ng-container>
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
-          {{ item.comments ? item.comments : '-' }}
+          {{ item.comments }}
         </td>
       </ng-container>
 
