--- a/apps/frontend/src/app/pages/tasks/tasks.component.html
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.html
@@ -23,13 +23,13 @@
     <ng-container matColumnDef="done">
       <th mat-header-cell *matHeaderCellDef>Done</th>
       <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '-' }}
+        {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="initials">
       <th mat-header-cell *matHeaderCellDef>Initials</th>
       <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.initials ? item.initials : '-' }}
+        {{ item.initials }}
       </td>
     </ng-container>
     <ng-container matColumnDef="actions">
@@ -93,13 +93,13 @@
     <ng-container matColumnDef="done">
       <th mat-header-cell *matHeaderCellDef>Done</th>
       <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '-' }}
+        {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="initials">
       <th mat-header-cell *matHeaderCellDef>Initials</th>
       <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.initials ? item.initials : '-' }}
+        {{ item.initials }}
       </td>
     </ng-container>
     <ng-container matColumnDef="actions">
