--- a/apps/frontend/src/app/pages/tasks/tasks.component.scss
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.scss
@@ -10,4 +10,8 @@
     font-weight: bold;
     color: var(--main-blue);
   }
+
+  .mat-table.cdk-table.ng-star-inserted {
+    width: 99% !important;
+  }
 }
