--- a/apps/frontend/src/assets/styles/dialog.scss
+++ b/apps/frontend/src/assets/styles/dialog.scss
@@ -89,7 +89,7 @@ h1 {
 
 @media (max-width: 1027px) {
   ::ng-deep.mat-dialog-container {
-    width: 450px;
+    width: 90vw;
     margin: auto;
     max-height: 90vh;
   }
